# rules

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
rules-api/: pyproject.toml
rules-classification/: pyproject.toml
rules-classification/rules/api/: api.py
rules-classification/rules/classification/: classification.py  clustering.py  competence_region_ensemble.py  measurements.py  rule_measures.py  rules_classifier.py  subspace_rules_classifier.py  test_competence_region_ensemble.py  test_rule_measures.py  utils.py
rules-classification/rules/nnge/: nnge.py  test_nnge.py
rules-classification/rules/overlapping/: graphx.py  measure_adjacencies.py
rules-classification/rules/utils/: general_utils.py  genetic_utils.py  join.py  keel.py  rule_nnge_adapter.py  shrinkage.py  shrinkage_rules_adapter.py  sympy_utils.py  utils.py
rules/api/v1/: api.py
rules/classification/: clustering.py  competence_region_ensemble.py  measurements.py  rule_measures.py  rules_classifier.py  sklearn_utils.py  subspace_rules_classifier.py  test_competence_region_ensemble.py  test_rule_measures.py  utils.py
rules/nnge/: nnge.py  rule_nnge_adapter.py  test_nnge.py
rules/note/: extract_rules.py
rules/note/overlapping/: graphx.py  measure_adjacencies.py
rules/utils/: general_utils.py  genetic_utils.py  join.py  keel.py  shrinkage.py  shrinkage_rules_adapter.py  sympy_utils.py  utils.py
sklearn-decision-tree/: pyproject.toml
sklearn-decision-tree/rules/sklearn/: extract_rules.py
