[tool.poetry]
name = "sklearn-decision-tree"
version = "0.1.0"
description = ""
authors = ["Bogdan Gulowaty <b.gulowaty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rules-api = { path = "../rules-api" }
attrs = "^20.3.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
